<resources>
    <string name="app_name">مهمان سرای امام رضا (ع)</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="t1">مهمان سرای امام رضا (ع)</string>
    <string name="t2">ورود کاربر</string>
    <string name="t3">ورود به حساب کاربری</string>
    <string name="t4">خروج از حساب کاربری</string>
    <string name="t5">منو</string>
    <string name="t6">پنل مدیریت</string>
    <string name="t7">مشتریان سابق</string>
    <string name="t8">تغییر نام کاربری و رمز ورود</string>
    <string name="t9">لیست سیاه</string>
    <string name="t10">درباره ما</string>
    <string name="t11">ارتباط با ما</string>
    <string name="t12">قفل برنامه</string>
    <string name="t13">حذف قفل برنامه</string>
    <string name="t14">غیر فعال کردن قفل برنامه</string>
    <string name="t15">تمامی حقوق این برنامه متعلق به مهمان سرای امام رضا (ع) است.</string>
    <string name="t16">نسخه: 1.0</string>
    <string name="t17">تاریخ انتشار: 1399.04.01</string>
    <string name="t18">ایده پرداز:</string>
    <string name="t19">محمد سلامت</string>
    <string name="t20">ارتباط با برنامه نویس:</string>
    <string name="t21">tijanima.71@gmail.com</string>
    <string name="t22">0915 0483680</string>
    <string name="t23">آدرس</string>
    <string name="address">مشهد،انتهای امام خمینی 49،بین ثامن الائمه 2 و4،پلاک 18/1</string>
    <string name="t29">051-38549657</string>
    <string name="t30">جستجو</string>
    <string name="t31">لیست سیاه</string>
    <string name="t32">حذف از لیست سیاه</string>
    <string name="t33">توضیحات:</string>
    <string name="t34">تخلفات مشتری</string>
    <string name="t35">مشتری از لیست سیاه حذف می شود،ادامه می دهید؟</string>
    <string name="t36">اطلاعات مشتری</string>
    <string name="t37">انصراف</string>
    <string name="t38">تایید</string>
    <string name="t39">مشتری در لیست سیاه قرار دارد،ادامه می دهید؟</string>
    <string name="t40">ادامه</string>
    <string name="t41">نام مشتری:</string>
    <string name="t42">شناسه:</string>
    <string name="t43">تلفن:</string>
    <string name="t44">تاریخ رزرو:</string>
    <string name="t45">اپراتور رزرو کننده:</string>
    <string name="t46">لیست رزرو خالی است!</string>
    <string name="t47">رزرو مشتری لغو می شود،ادامه می دهید؟</string>
    <string name="t48">اپراتوری وجود ندارد!</string>
    <string name="t49">اپراتور حذف می شود،ادامه می دهید؟</string>
    <string name="t50">کلیه اطلاعات ماه مربوطه پاک می شود،ادامه می دهید؟</string>
    <string name="t51">نام کاربری فعلی</string>
    <string name="t52">رمز ورود فعلی</string>
    <string name="t53">نام کاربری جدید</string>
    <string name="t54">رمز ورود جدید</string>
    <string name="t55">تکرار رمز ورود</string>
    <string name="t56">کلمه عبور</string>
    <string name="t57">مشکل در اتصال به اینترنت!</string>
    <string name="t58">تلاش مجدد</string>
    <string name="t59">امکان دسترسی به این ماه در حال حاضر وجود ندارد!</string>
    <string name="t60">بستن</string>
    <string name="t61">لیست مشتریان خالی است!</string>
    <string name="t62">لیست سیاه خالی است!</string>
    <string name="e1">نام و نام خانوادگی</string>
    <string name="e2">تلفن</string>
    <string name="e3">شناسه</string>
    <string name="e4">تعداد نفرات اولیه :</string>
    <string name="e5">تعداد نفرات مازاد :</string>
    <string name="e6">مشتری ویژه</string>
    <string name="e7">هزینه :</string>
    <string name="e8">هزینه نهایی :</string>
    <string name="e9">مبلغ دریافتی (تومان)</string>
    <string name="e10">شماره فیش پرداختی</string>
    <string name="e11">کل هزینه اقامت:</string>
    <string name="e12">مبلغ دریافتی:</string>
    <string name="e13">شماره فیش پرداختی:</string>
    <string name="e14">وضعیت حساب:</string>
    <string name="e15">نام و نام خانوادگی</string>
    <string name="e16">کد مربوطه</string>
    <string name="e17">نام کاربری</string>
    <string name="e18">تایید</string>
    <string name="e19">کلمه عبور</string>
    <string name="e20">ثبت تغییرات</string>
    <string name="txt1">ورود</string>
    <string name="txt2">ذخیره</string>
    <string name="txt3">حذف قفل برنامه</string>
    <string name="txt4">تایید و ادامه ></string>
    <string name="txt5">انصراف</string>
    <string name="txt6">محاسبه هزینه</string>
    <string name="txt7">روزهای انتخاب شده برای رزرو :</string>
    <string name="txt8">ثبت اطلاعات</string>
    <string name="txt9">روزهای رزرو شده:</string>
    <string name="txt10">جزئیات</string>
    <string name="txt11">افزودن بستانکاری</string>
    <string name="txt12">لغو کردن رزرو</string>
    <string name="txt13">انتخاب کنید</string>
    <string name="txt14">مبلغ را به تومان وارد کنید</string>
    <string name="txt15">رزرو مشتری با موفقیت لغو شد</string>
    <string name="txt16">پنل مدیریت</string>
    <string name="txt17">ایجاد اپراتور</string>
    <string name="txt18">اپراتورها</string>
    <string name="txt19">وضعیت سوئیت ها</string>
    <string name="txt20">قیمت سوئیت ها</string>
    <string name="txt21">وضعیت ماه ها</string>
    <string name="txt22">گزارش درآمدی ها</string>
    <string name="txt23">ریست کردن برنامه</string>
    <string name="txt24">حذف اپراتور</string>
    <string name="txt25">فعال کردن سوئیت ها</string>
    <string name="txt26">فعال</string>
    <string name="txt27">غیر فعال</string>
    <string name="txt28">قیمت برای مشتریان عادی</string>
    <string name="txt29">ویرایش قیمت ها</string>
    <string name="txt30">قیمت برای مشتریان ویژه :</string>
    <string name="txt31">قیمت برای افراد مازاد:</string>
    <string name="txt32">قیمت سوئیت ها</string>
    <string name="txt33">قیمت نفرات مازاد برای مشتریان ویژه</string>
    <string name="txt34">قیمت نفرات مازاد برای مشتریان عادی</string>
    <string name="txt35">قیمت برای مشتریان ویژه</string>
    <string name="txt36">قیمت برای مشتریان عادی</string>
    <string name="txt37">فعال کردن ماه ها</string>
    <string name="txt38">گزارش درآمدی</string>
    <string name="txt39">درآمدی =</string>
    <string name="txt40">دریافتی =</string>
    <string name="txt41">اختلاف =</string>
    <string name="txt42">درآمدی سالانه=</string>
    <string name="txt43">دریافتی سالانه=</string>
    <string name="txt44">رمز ورود را وارد کنید</string>
    <string name="resM1">ریست فروردین</string>
    <string name="resM2">ریست اردیبهشت</string>
    <string name="resM3">ریست خرداد</string>
    <string name="resM4">ریست تیر</string>
    <string name="resM5">ریست مرداد</string>
    <string name="resM6">ریست شهریور</string>
    <string name="resM7">ریست مهر</string>
    <string name="resM8">ریست آبان</string>
    <string name="resM9">ریست آذر</string>
    <string name="resM10">ریست دی</string>
    <string name="resM11">ریست بهمن</string>
    <string name="resM12">ریست اسفند</string>
    <string name="resM">ریست کلیه ماه ها</string>
    <string name="m1">فروردین</string>
    <string name="m2">اردیبهشت</string>
    <string name="m3">خرداد</string>
    <string name="m4">تیر</string>
    <string name="m5">مرداد</string>
    <string name="m6">شهریور</string>
    <string name="m7">مهر</string>
    <string name="m8">آبان</string>
    <string name="m9">آذر</string>
    <string name="m10">دی</string>
    <string name="m11">بهمن</string>
    <string name="m12">اسفند</string>
    <string name="s1">سوئیت 1</string>
    <string name="s2">سوئیت 2</string>
    <string name="s3">سوئیت 3</string>
    <string name="s4">سوئیت 4</string>
    <string name="s5">سوئیت 5</string>
    <string name="s6">سوئیت 6</string>
    <string name="s7">سوئیت 7</string>
    <string name="s8">سوئیت 8</string>
    <string name="s9">سوئیت 9</string>
    <string name="s10">سوئیت 10</string>
    <string name="s11">سوئیت 11</string>
    <string name="s12">سوئیت 12</string>
    <string name="farvardin1">1 فروردین</string>
    <string name="farvardin2">2 فروردین</string>
    <string name="farvardin3">3 فروردین</string>
    <string name="farvardin4">4 فروردین</string>
    <string name="farvardin5">5 فروردین</string>
    <string name="farvardin6">6 فروردین</string>
    <string name="farvardin7">7 فروردین</string>
    <string name="farvardin8">8 فروردین</string>
    <string name="farvardin9">9 فروردین</string>
    <string name="farvardin10">10 فروردین</string>
    <string name="farvardin11">11 فروردین</string>
    <string name="farvardin12">12 فروردین</string>
    <string name="farvardin13">13 فروردین</string>
    <string name="farvardin14">14 فروردین</string>
    <string name="farvardin15">15 فروردین</string>
    <string name="farvardin16">16 فروردین</string>
    <string name="farvardin17">17 فروردین</string>
    <string name="farvardin18">18 فروردین</string>
    <string name="farvardin19">19 فروردین</string>
    <string name="farvardin20">20 فروردین</string>
    <string name="farvardin21">21 فروردین</string>
    <string name="farvardin22">22 فروردین</string>
    <string name="farvardin23">23 فروردین</string>
    <string name="farvardin24">24 فروردین</string>
    <string name="farvardin25">25 فروردین</string>
    <string name="farvardin26">26 فروردین</string>
    <string name="farvardin27">27 فروردین</string>
    <string name="farvardin28">28 فروردین</string>
    <string name="farvardin29">29 فروردین</string>
    <string name="farvardin30">30 فروردین</string>
    <string name="farvardin31">31 فروردین</string>
    <string name="ordibehesht1">1 اردیبهشت</string>
    <string name="ordibehesht2">2 اردیبهشت</string>
    <string name="ordibehesht3">3 اردیبهشت</string>
    <string name="ordibehesht4">4 اردیبهشت</string>
    <string name="ordibehesht5">5 اردیبهشت</string>
    <string name="ordibehesht6">6 اردیبهشت</string>
    <string name="ordibehesht7">7 اردیبهشت</string>
    <string name="ordibehesht8">8 اردیبهشت</string>
    <string name="ordibehesht9">9 اردیبهشت</string>
    <string name="ordibehesht10">10 اردیبهشت</string>
    <string name="ordibehesht11">11 اردیبهش</string>
    <string name="ordibehesht12">12 اردیبهشت</string>
    <string name="ordibehesht13">13 اردیبهشت</string>
    <string name="ordibehesht14">14 اردیبهش</string>
    <string name="ordibehesht15">15 اردیبهشت</string>
    <string name="ordibehesht16">16 اردیبهشت</string>
    <string name="ordibehesht17">17 اردیبهشت</string>
    <string name="ordibehesht18">18 اردیبهشت</string>
    <string name="ordibehesht19">19 اردیبهشت</string>
    <string name="ordibehesht20">20 اردیبهشت</string>
    <string name="ordibehesht21">21 اردیبهشت</string>
    <string name="ordibehesht22">22 اردیبهشت</string>
    <string name="ordibehesht23">23 اردیبهشت</string>
    <string name="ordibehesht24">24 اردیبهشت</string>
    <string name="ordibehesht25">25 اردیبهشت</string>
    <string name="ordibehesht26">26 اردیبهشت</string>
    <string name="ordibehesht27">27 اردیبهشت</string>
    <string name="ordibehesht28">28 اردیبهشت</string>
    <string name="ordibehesht29">29 اردیبهشت</string>
    <string name="ordibehesht30">30 اردیبهشت</string>
    <string name="ordibehesht31">31 اردیبهشت</string>
    <string name="khordad1">1 خرداد</string>
    <string name="khordad2">2 خرداد</string>
    <string name="khordad3">3 خرداد</string>
    <string name="khordad4">4 خرداد</string>
    <string name="khordad5">5 خرداد</string>
    <string name="khordad6">6 خرداد</string>
    <string name="khordad7">7 خرداد</string>
    <string name="khordad8">8 خرداد</string>
    <string name="khordad9">9 خرداد</string>
    <string name="khordad10">10 خرداد</string>
    <string name="khordad11">11 خرداد</string>
    <string name="khordad12">12 خرداد</string>
    <string name="khordad13">13 خرداد</string>
    <string name="khordad14">14 خرداد</string>
    <string name="khordad15">15 خرداد</string>
    <string name="khordad16">16 خرداد</string>
    <string name="khordad17">17 خرداد</string>
    <string name="khordad18">18 خرداد</string>
    <string name="khordad19">19 خرداد</string>
    <string name="khordad20">20 خرداد</string>
    <string name="khordad21">21 خرداد</string>
    <string name="khordad22">22 خرداد</string>
    <string name="khordad23">23 خرداد</string>
</resources>