<?xml version="1.0" encoding="utf-8"?>

<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:columnCount="12"
    android:orientation="horizontal"
    android:rowCount="1">

    <androidx.cardview.widget.CardView
        android:layout_gravity="left|top"
        android:padding="10dp"
        app:cardCornerRadius="6dp"
        app:cardUseCompatPadding="true">

        <TextView
            android:layout_width="100dp"
            android:layout_height="46dp"
            android:layout_gravity="center"
            android:background="@color/bgSuite1"
            android:fontFamily="@font/sahelbold"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/s1"
            android:textColor="@color/white"
            android:textSize="16sp" />


    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_gravity="left|top"
        android:padding="10dp"
        app:cardCornerRadius="6dp"
        app:cardUseCompatPadding="true">

        <TextView
            android:layout_width="100dp"
            android:layout_height="46dp"
            android:layout_gravity="center"
            android:background="@color/bgSuite2"
            android:fontFamily="@font/sahelbold"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/s2"
            android:textColor="@color/white"
            android:textSize="16sp" />


    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_gravity="left|top"
        android:padding="10dp"
        app:cardCornerRadius="6dp"
        app:cardUseCompatPadding="true">

        <TextView
            android:layout_width="100dp"
            android:layout_height="46dp"
            android:layout_gravity="center"
            android:background="@color/bgSuite3"
            android:fontFamily="@font/sahelbold"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/s3"
            android:textColor="@color/white"
            android:textSize="16sp" />


    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_gravity="left|top"
        android:padding="10dp"
        app:cardCornerRadius="6dp"
        app:cardUseCompatPadding="true">

        <TextView
            android:layout_width="100dp"
            android:layout_height="46dp"
            android:layout_gravity="center"
            android:background="@color/bgSuite4"
            android:fontFamily="@font/sahelbold"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/s4"
            android:textColor="@color/white"
            android:textSize="16sp" />


    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_gravity="left|top"
        android:padding="10dp"
        app:cardCornerRadius="6dp"
        app:cardUseCompatPadding="true">

        <TextView
            android:layout_width="100dp"
            android:layout_height="46dp"
            android:layout_gravity="center"
            android:background="@color/bgSuite5"
            android:fontFamily="@font/sahelbold"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/s5"
            android:textColor="@color/white"
            android:textSize="16sp" />


    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_gravity="left|top"
        android:padding="10dp"
        app:cardCornerRadius="6dp"
        app:cardUseCompatPadding="true">

        <TextView
            android:layout_width="100dp"
            android:layout_height="46dp"
            android:layout_gravity="center"
            android:background="@color/bgSuite6"
            android:fontFamily="@font/sahelbold"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/s6"
            android:textColor="@color/white"
            android:textSize="16sp" />


    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_gravity="left|top"
        android:padding="10dp"
        app:cardCornerRadius="6dp"
        app:cardUseCompatPadding="true">

        <TextView
            android:layout_width="100dp"
            android:layout_height="46dp"
            android:layout_gravity="center"
            android:background="@color/bgSuite7"
            android:fontFamily="@font/sahelbold"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/s7"
            android:textColor="@color/white"
            android:textSize="16sp" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_gravity="left|top"
        android:padding="10dp"
        app:cardCornerRadius="6dp"
        app:cardUseCompatPadding="true">

        <TextView
            android:layout_width="100dp"
            android:layout_height="46dp"
            android:layout_gravity="center"
            android:background="@color/bgSuite8"
            android:fontFamily="@font/sahelbold"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/s8"
            android:textColor="@color/white"
            android:textSize="16sp" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_gravity="left|top"
        android:padding="10dp"
        app:cardCornerRadius="6dp"
        app:cardUseCompatPadding="true">

        <TextView
            android:layout_width="100dp"
            android:layout_height="46dp"
            android:layout_gravity="center"
            android:background="@color/bgSuite9"
            android:fontFamily="@font/sahelbold"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/s9"
            android:textColor="@color/white"
            android:textSize="16sp" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_gravity="left|top"
        android:padding="10dp"
        app:cardCornerRadius="6dp"
        app:cardUseCompatPadding="true">

        <TextView
            android:layout_width="100dp"
            android:layout_height="46dp"
            android:layout_gravity="center"
            android:background="@color/bgSuite10"
            android:fontFamily="@font/sahelbold"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/s10"
            android:textColor="@color/white"
            android:textSize="16sp" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_gravity="left|top"
        android:padding="10dp"
        app:cardCornerRadius="6dp"
        app:cardUseCompatPadding="true">

        <TextView
            android:layout_width="100dp"
            android:layout_height="46dp"
            android:layout_gravity="center"
            android:background="@color/bgSuite11"
            android:fontFamily="@font/sahelbold"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/s11"
            android:textColor="@color/white"
            android:textSize="16sp" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_gravity="left|top"
        android:padding="10dp"
        app:cardCornerRadius="6dp"
        app:cardUseCompatPadding="true">

        <TextView
            android:layout_width="100dp"
            android:layout_height="46dp"
            android:layout_gravity="center"
            android:background="@color/bgSuite12"
            android:fontFamily="@font/sahelbold"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/s12"
            android:textColor="@color/white"
            android:textSize="16sp" />
    </androidx.cardview.widget.CardView>


</GridLayout>

