<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            tools:context=".view.fragments.FragmentAboutWe">

            <RelativeLayout
                android:id="@+id/rel_fragmentAboutMe_relative1"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:background="@color/colorToolbar">

                <ImageView
                    android:id="@+id/img_fragmentAboutMe_imgIcon"
                    android:layout_width="90dp"
                    android:layout_height="100dp"
                    android:layout_centerInParent="true"
                    android:scaleType="centerCrop"
                    android:src="@drawable/icon_pic" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/img_fragmentAboutMe_imgIcon"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="4dp"
                    android:fontFamily="@font/sahelblack"
                    android:gravity="center"
                    android:text="@string/app_name"
                    android:textColor="@color/white"
                    android:textSize="18sp" />


            </RelativeLayout>

            <ScrollView
                android:layout_below="@+id/rel_fragmentAboutMe_relative1"
                android:scrollbars="none"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <LinearLayout
                        android:id="@+id/fragmentAboutUsInfo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="6dp"
                            android:fontFamily="@font/sahelbold"
                            android:gravity="center"
                            android:padding="4dp"
                            android:text="@string/t15"
                            android:textColor="@color/black"
                            android:textSize="14sp" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="6dp"
                            android:fontFamily="@font/sahelsemibold"
                            android:gravity="center"
                            android:padding="4dp"
                            android:text="@string/t16"
                            android:textColor="@color/black"
                            android:textSize="14sp" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="6dp"
                            android:fontFamily="@font/sahelsemibold"
                            android:gravity="center"
                            android:padding="4dp"
                            android:text="@string/t17"
                            android:textColor="@color/black"
                            android:textSize="14sp" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="15dp"
                            android:fontFamily="@font/sahelsemibold"
                            android:gravity="center"
                            android:padding="4dp"
                            android:text="@string/t18"
                            android:textColor="@color/black"
                            android:textSize="14sp" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="6dp"
                            android:fontFamily="@font/sahelbold"
                            android:gravity="center"
                            android:padding="4dp"
                            android:text="@string/t19"
                            android:textColor="@color/black"
                            android:textSize="14sp" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="15dp"
                            android:fontFamily="@font/sahelsemibold"
                            android:gravity="center"
                            android:padding="4dp"
                            android:text="@string/t20"
                            android:textColor="@color/black"
                            android:textSize="14sp" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="6dp"
                            android:fontFamily="@font/sahelbold"
                            android:gravity="center"
                            android:padding="4dp"
                            android:text="@string/t21"
                            android:textColor="@color/cobalt"
                            android:textSize="14sp" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="6dp"
                            android:fontFamily="@font/sahelbold"
                            android:gravity="center"
                            android:padding="4dp"
                            android:text="@string/t22"
                            android:textColor="@color/cobalt"
                            android:textSize="14sp" />


                    </LinearLayout>

                    <com.airbnb.lottie.LottieAnimationView
                        android:layout_marginTop="20dp"
                        android:layout_below="@+id/fragmentAboutUsInfo"
                        android:layout_width="match_parent"
                        android:layout_height="130dp"
                        android:layout_centerHorizontal="true"
                        app:lottie_autoPlay="true"
                        app:lottie_loop="true"
                        app:lottie_rawRes="@raw/about_us_anim" />
                </RelativeLayout>


            </ScrollView>





        </RelativeLayout>

</layout>
