<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/myfavoriteBg"
    android:padding="20dp">

    <EditText
        android:inputType="number"
        android:id="@+id/edtSpacialPrice"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/edt_shape_2"
        android:fontFamily="@font/sahelmamoli"
        android:gravity="center"
        android:hint="@string/txt35"
        android:textColor="@color/black"
        android:textSize="16sp" />
    <EditText
        android:layout_marginTop="10dp"
        android:layout_below="@+id/edtSpacialPrice"
        android:inputType="number"
        android:id="@+id/edtSpacialMazadPrice"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/edt_shape_2"
        android:fontFamily="@font/sahelmamoli"
        android:gravity="center"
        android:hint="@string/txt33"
        android:textColor="@color/black"
        android:textSize="16sp" />
    <EditText
        android:layout_marginTop="10dp"
        android:layout_below="@+id/edtSpacialMazadPrice"
        android:inputType="number"
        android:id="@+id/edtPrice"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/edt_shape_2"
        android:fontFamily="@font/sahelmamoli"
        android:gravity="center"
        android:hint="@string/txt36"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <EditText
        android:layout_marginTop="10dp"
        android:layout_below="@+id/edtPrice"
        android:inputType="number"
        android:id="@+id/edtMazadPrice"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/edt_shape_2"
        android:fontFamily="@font/sahelmamoli"
        android:gravity="center"
        android:hint="@string/txt34"
        android:textColor="@color/black"
        android:textSize="16sp" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edtMazadPrice"
        android:layout_marginTop="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:orientation="horizontal">


            <androidx.cardview.widget.CardView
                android:id="@+id/cardDialog_custom_dialog_editPrice_btn_cancel"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardBackgroundColor="@color/weibo"
                app:cardCornerRadius="8dp"
                app:cardElevation="4dp"
                app:cardUseCompatPadding="true">


                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/sahelbold"
                    android:gravity="center"
                    android:padding="6dp"
                    android:text="@string/t37"
                    android:textColor="@color/white"
                    android:textSize="16sp" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardDialog_custom_dialog_editPrice_btn_confirm"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardBackgroundColor="@color/popaGreenApp"
                app:cardCornerRadius="8dp"
                app:cardElevation="4dp"
                app:cardUseCompatPadding="true">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/sahelbold"
                    android:gravity="center"
                    android:padding="6dp"
                    android:text="@string/t38"
                    android:textColor="@color/white"
                    android:textSize="16sp" />
            </androidx.cardview.widget.CardView>


        </LinearLayout>


    </RelativeLayout>

</RelativeLayout>